--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,8 @@ development:
   encoding: unicode
   database: mplnew_development
   pool: 5
-  username: bhanu
-  password: postgres
+  username: postgres
+  password: vaio
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -43,13 +43,13 @@ test:
   encoding: unicode
   database: mplnew_test
   pool: 5
-  username: bhanu
-  password: postgres
+  username: postgres
+  password: vaio
 
 production:
   adapter: postgresql
   encoding: unicode
   database: mplnew_production
   pool: 5
-  username: bhanu
-  password: postgres
+  username: postgres
+  password: vaio
